--- a/_data/recs.yaml
+++ b/_data/recs.yaml
@@ -18,7 +18,7 @@ list:
         politics, sexuality, friendship, physics and metaphysics, class
         struggle, environmentalism, and more - all of which I would say it
         navigates maturely and clearheadedly. Somehow, it is never pretentious.
-      - Great chaos pick for any politically divided book club.
+      - Solid chaos pick for a politically diverse book club.
     cf:
       - title: Walkaway
         desc: Walkaway substitutes the desert in place of the moon and
